Fix project modal header styles on mobile views and update delta-ui version

--- a/src/views/NonPersonalProjects/non-personal-projects.module.scss
+++ b/src/views/NonPersonalProjects/non-personal-projects.module.scss
@@ -125,6 +125,10 @@
 }
 
 .modal {
+  .header {
+    gap: 20px;
+  }
+
   .imgContainer {
     width: 100%;
     display: flex;
